Se agregaron los iconos

--- a/index.html
+++ b/index.html
@@ -20,96 +20,96 @@
                 </div>
                 <div class="menu-right">
                     <nav>
-                        <i class="icon-menu-righ">1</i>
-                        <i class="icon-menu-righ">2</i>
-                        <i class="icon-menu-righ">3</i>
-                        <i class="icon-menu-righ">4</i>
-                        <i class="icon-menu-righ">5</i>
+                        <i class="icon-menu-righ icon-search"></i>
+                        <i class="icon-menu-righ icon-video_call"></i>
+                        <i class="icon-menu-righ icon-stack"></i>
+                        <i class="icon-menu-righ icon-bell"></i>
+                        <i class="icon-menu-righ image-stack"></i>
                     </nav>
                 </div>
             </nav>
         </header>
         <div class="menu-left">
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-home"></i>
                 <p>Principal</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-fire"></i>
                 <p>Tendencias</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-stack"></i>
                 <p>Suscriptiones</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-youtube-play"></i>
                 <p>Originals</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-video_library"></i>
                 <p>Bibioteca</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-stack"></i>
                 <p>Historial</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-film"></i>
                 <p>Tus videos</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-stack"></i>
                 <p>Tus películas</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-clock2"></i>
                 <p>Ver más tarde</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-stack"></i>
                 <p>Mostrar más</p>
             </a>
             <p>suscriptiones</p>
             <a href="" class="menu-left-item">
-                <i class="icon-suscription"></i>
+                <i class="icon-suscription icon-stack"></i>
                 <p>Canal 1</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-suscription"></i>
+                <i class="icon-suscription icon-stack"></i>
                 <p>Canal 2</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-stack"></i>
                 <p>explorar canales</p>
             </a>
             <p>más de youtube</p>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-stack"></i>
                 <p>Videojuegos</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-feed"></i>
                 <p>en vivo</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-stack"></i>
                 <p>aprendizaje</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-cog"></i>
                 <p>configuración</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-flag"></i>
                 <p>historial de denuncias</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-help"></i>
                 <p>ayuda</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-menu-left"></i>
+                <i class="icon-menu-left icon-message-square"></i>
                 <p>enviar comentarios</p>
             </a>
             <a href="" class="condition">Acerca de</a>
@@ -124,38 +124,38 @@
             <a href="" class="condition">política y seguridad</a>
             <a href="" class="condition">cómo funciona YouTube</a>
             <a href="" class="condition">prueba funciones nuevas</a>
-            <i class="copyright"></i>
+            <i class="icon-copyright icon-stack"></i>
             <p>2020 Google LLC</p>
         </div>
         <div class="menu-crear">
             <a href="" class="menu-crear-item">
-                <i class="icon-menu-crear"></i>
+                <i class="icon-menu-crear icon-film"></i>
                 <p>subir video</p>
             </a>
             <a href="" class="menu-crear-item">
-                <i class="icon-menu-crear"></i>
+                <i class="icon-menu-crear icon-feed"></i>
                 <p>Transmitir en vivo</p>
             </a>
         </div>
         <div class="menu-apps">
             <a href="" class="menu-apps-item">
-                <i class="icon-menu-apps"></i>
+                <i class="icon-menu-apps icon-youtube"></i>
                 <p>YouTube TV</p>
             </a>
             <a href="" class="menu-apps-item">
-                <i class="icon-menu-apps"></i>
+                <i class="icon-menu-apps icon-youtube"></i>
                 <p>YouTube Music</p>
             </a>
             <a href="" class="menu-apps-item">
-                <i class="icon-menu-apps"></i>
+                <i class="icon-menu-apps icon-youtube"></i>
                 <p>YouTube Kids</p>
             </a>
             <a href="" class="menu-apps-item">
-                <i class="icon-menu-apps"></i>
+                <i class="icon-menu-apps icon-youtube"></i>
                 <p>Academia de Creadores</p>
             </a>
             <a href="" class="menu-apps-item">
-                <i class="icon-menu-apps"></i>
+                <i class="icon-menu-apps icon-youtube"></i>
                 <p>YouTube para Artistas</p>
             </a>
         </div>
@@ -163,7 +163,7 @@
             <div class="bar-notification">
                 <p>Notificaciones</p>
                 <a href="" class="config">
-                    <i class="button-config"></i>
+                    <i class="button-config icon-cog"></i>
                 </a>
             </div>
             <a href="" class="notification">
@@ -173,7 +173,7 @@
                     <p>hace 1 día</p>
                 </div>
                 <img src="" alt="" class="image-content">
-                <i class="more-options-notification"></i>
+                <i class="more-options-notification icon-more-vertical"></i>
             </a>
             <a href="" class="notification">
                 <img src="" alt="" class="image-profile">
@@ -182,7 +182,7 @@
                     <p>hace 1 día</p>
                 </div>
                 <img src="" alt="" class="image-content">
-                <i class="more-options-notification"></i>
+                <i class="more-options-notification icon-more-vertical"></i>
             </a>
             <a href="" class="notification">
                 <img src="" alt="" class="image-profile">
@@ -191,7 +191,7 @@
                     <p>hace 1 día</p>
                 </div>
                 <img src="" alt="" class="image-content">
-                <i class="more-options-notification"></i>
+                <i class="more-options-notification icon-more-vertical"></i>
             </a>
             <a href="" class="notification">
                 <img src="" alt="" class="image-profile">
@@ -200,7 +200,7 @@
                     <p>hace 1 día</p>
                 </div>
                 <img src="" alt="" class="image-content">
-                <i class="more-options-notification"></i>
+                <i class="more-options-notification icon-more-vertical"></i>
             </a>
             <a href="" class="notification">
                 <img src="" alt="" class="image-profile">
@@ -209,7 +209,7 @@
                     <p>hace 1 día</p>
                 </div>
                 <img src="" alt="" class="image-content">
-                <i class="more-options-notification"></i>
+                <i class="more-options-notification icon-more-vertical"></i>
             </a>
             <a href="" class="notification">
                 <img src="" alt="" class="image-profile">
@@ -218,7 +218,7 @@
                     <p>hace 1 día</p>
                 </div>
                 <img src="" alt="" class="image-content">
-                <i class="more-options-notification"></i>
+                <i class="more-options-notification icon-more-vertical"></i>
             </a>
             <a href="" class="notification">
                 <img src="" alt="" class="image-profile">
@@ -227,7 +227,7 @@
                     <p>hace 1 día</p>
                 </div>
                 <img src="" alt="" class="image-content">
-                <i class="more-options-notification"></i>
+                <i class="more-options-notification icon-more-vertical"></i>
             </a>
             <a href="" class="notification">
                 <img src="" alt="" class="image-profile">
@@ -236,7 +236,7 @@
                     <p>hace 1 día</p>
                 </div>
                 <img src="" alt="" class="image-content">
-                <i class="more-options-notification"></i>
+                <i class="more-options-notification icon-more-vertical"></i>
             </a>
             <a href="" class="notification">
                 <img src="" alt="" class="image-profile">
@@ -245,11 +245,11 @@
                     <p>hace 1 día</p>
                 </div>
                 <img src="" alt="" class="image-content">
-                <i class="more-options-notification"></i>
+                <i class="more-options-notification icon-more-vertical"></i>
             </a>
         </div>
         <div class="menu-more-options-notification">
-            <i class="ocultar"></i>
+            <i class="ocultar icon-stack"></i>
             <p>Ocultar esta notificación</p>
             <p>Desactivar todas las notificaciones del artista</p>
             <p>Desactivar todas las notificaciones de recomendaciones</p>
@@ -263,57 +263,57 @@
             </div>
             <div class="account-options">
                 <a href="" class="account-options-item">
-                    <i class="icon-account-options"></i>
+                    <i class="icon-account-options icon-user-square"></i>
                     <p>Tu canal</p>
                 </a>
                 <a href="" class="account-options-item">
-                    <i class="icon-account-options"></i>
+                    <i class="icon-account-options icon-currency-dollar"></i>
                     <p>Compras y membresías</p>
                 </a>
                 <a href="" class="account-options-item">
-                    <i class="icon-account-options"></i>
+                    <i class="icon-account-options icon-cog"></i>
                     <p>YouTube Studio</p>
                 </a>
                 <a href="" class="account-options-item">
-                    <i class="icon-account-options"></i>
+                    <i class="icon-account-options icon-user-square"></i>
                     <p>Cambiar de cuenta</p>
                 </a>
                 <a href="" class="account-options-item">
-                    <i class="icon-account-options"></i>
+                    <i class="icon-account-options icon-exit_to_app"></i>
                     <p>Salir</p>
                 </a>
             </div>
             <div class="config-global">
                 <a href="" class="config-global-item">
-                    <i class="icon-config-global"></i>
+                    <i class="icon-config-global icon-stack"></i>
                     <p>Aspecto: Tema del dispositivo</p>
                 </a>
                 <a href="" class="config-global-item">
-                    <i class="icon-config-global"></i>
+                    <i class="icon-config-global icon-language"></i>
                     <p>Idiona: Español latinoamericano</p>
                 </a>
                 <a href="" class="config-global-item">
-                    <i class="icon-config-global"></i>
+                    <i class="icon-config-global icon-sphere"></i>
                     <p>Ubicación: Colombia</p>
                 </a>
                 <a href="" class="config-global-item">
-                    <i class="icon-config-global"></i>
+                    <i class="icon-config-global icon-cog"></i>
                     <p>Configuración</p>
                 </a>
                 <a href="" class="config-global-item">
-                    <i class="icon-config-global"></i>
+                    <i class="icon-config-global icon-stack"></i>
                     <p>Tus datos en YouTube</p>
                 </a>
                 <a href="" class="config-global-item">
-                    <i class="icon-config-global"></i>
+                    <i class="icon-config-global icon-help"></i>
                     <p>Ayuda</p>
                 </a>
                 <a href="" class="config-global-item">
-                    <i class="icon-config-global"></i>
+                    <i class="icon-config-global icon-message-square"></i>
                     <p>Enviar comentarios</p>
                 </a>
                 <a href="" class="config-global-item">
-                    <i class="icon-config-global"></i>
+                    <i class="icon-config-global icon-stack"></i>
                     <p>Combinaciones de teclas</p>
                 </a>
             </div>
@@ -588,29 +588,29 @@
         <div class="menu-more-options-content">
             <div class="interes">
                 <div class="option-content">
-                    <i class="icon-option-content"></i>
+                    <i class="icon-option-content icon-playlist_play"></i>
                     <p>Agregar a la fila</p>
                 </div>
                 <div class="option-content">
-                    <i class="icon-option-content"></i>
+                    <i class="icon-option-content icon-clock2"></i>
                     <p>Guargar en Ver más tarde</p>
                 </div>
                 <div class="option-content">
-                    <i class="icon-option-content"></i>
+                    <i class="icon-option-content icon-playlist_add"></i>
                     <p>Guardar en una lista de reproducción</p>
                 </div>
             </div>
             <div class="other">
                 <div class="option-content">
-                    <i class="icon-option-content"></i>
+                    <i class="icon-option-content icon-blocked"></i>
                     <p>No me interesa</p>
                 </div>
                 <div class="option-content">
-                    <i class="icon-option-content"></i>
+                    <i class="icon-option-content icon-remove_circle_outline"></i>
                     <p>No recomendar el canal</p>
                 </div>
                 <div class="option-content">
-                    <i class="icon-option-content"></i>
+                    <i class="icon-option-content icon-flag"></i>
                     <p>Denunciar</p>
                 </div>
             </div>
