agraga logo de premium

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <nav class="bar-top">
                 <div class="menu-bar-left">
                     <i class="icon-menu-left"></i>
-                    <img src="" alt="">
+                    <img src="images/YouTube_Premium_logo.png" alt="">
+                    <span>CO</span>
                 </div>
                 <div class="search-bar">
                     <input type="text"/>
