Se organizan el layout del header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>YouTube</title>
         <!-- <link rel="shortcut icon" href="images/" type="image/x-icon"> -->
         <link rel="stylesheet" href="style.css">
+        
     </head>
     <body>
         <header class="header">
@@ -16,21 +17,23 @@
                     <span>CO</span>
                 </div>
                 <div class="search-bar">
-                    <input type="text"/>
-                    <input type="button" value="">
+                    <input type="text" placeholder="Buscar" class="box-search"/>
+                    <div class="search-button">
+                        <i class="button-search icon-search"></i>
+                    </div>
                 </div>
                 <div class="menu-right">
-                    <nav>
-                        <i class="icon-menu-righ icon-search"></i>
+                    <nav class="menu-right-items">
+                        <i class="icon-menu-righ icon-search no-show"></i>
                         <i class="icon-menu-righ icon-video_call"></i>
                         <i class="icon-menu-righ icon-stack"></i>
                         <i class="icon-menu-righ icon-bell"></i>
-                        <i class="icon-menu-righ image-stack"></i>
+                        <img src="images/image-profile.PNG" alt="" class="icon-menu-righ image-profile">
                     </nav>
                 </div>
             </nav>
         </header>
-        <div class="menu-left">
+        <!-- <div class="menu-left">
             <a href="" class="menu-left-item">
                 <i class="icon-menu-left icon-home"></i>
                 <p>Principal</p>
@@ -615,6 +618,6 @@
                     <p>Denunciar</p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </body>
 </html>
