Se organiza el media queri para el header

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>YouTube</title>
+        <title>YouTube Clone</title>
         <!-- <link rel="shortcut icon" href="images/" type="image/x-icon"> -->
         <link rel="stylesheet" href="style.css">
-        
+        <link rel="stylesheet" href="media.css">
     </head>
     <body>
         <header class="header">
@@ -24,7 +24,7 @@
                 </div>
                 <div class="menu-right">
                     <nav class="menu-right-items">
-                        <i class="icon-menu-righ icon-search no-show"></i>
+                        <i class="icon-menu-righ icon-search"></i>
                         <i class="icon-menu-righ icon-video_call"></i>
                         <i class="icon-menu-righ icon-stack"></i>
                         <i class="icon-menu-righ icon-bell"></i>
