Se organizó el media queri en el mismo archivo de estilos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>YouTube</title>
         <!-- <link rel="shortcut icon" href="images/" type="image/x-icon"> -->
         <link rel="stylesheet" href="style.css">
-        
+        <!-- <link rel="stylesheet" href="media.css"> -->
     </head>
     <body>
         <header class="header">
