Se realiza el diseño del  menu principal

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <!-- <link rel="shortcut icon" href="images/" type="image/x-icon"> -->
         <link rel="stylesheet" href="style.css">
         <!-- <link rel="stylesheet" href="media.css"> -->
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;500;900&display=swap');
+        </style>
+            
     </head>
     <body>
         <header class="header">
@@ -33,6 +37,28 @@
                 </div>
             </nav>
         </header>
+        <div class="menu-left-small">
+            <a href="" class="left-small-item">
+                <i class="icon-menu-left-small icon-home"></i>
+                <p>Principal</p>
+            </a>
+            <a href="" class="left-small-item">
+                <i class="icon-menu-left-small icon-fire"></i>
+                <p>Tendencias</p>
+            </a>
+            <a href="" class="left-small-item">
+                <i class="icon-menu-left-small icon-stack"></i>
+                <p>Suscripciones</p>
+            </a>
+            <a href="" class="left-small-item">
+                <i class="icon-menu-left-small icon-youtube-play"></i>
+                <p>Originals</p>
+            </a>
+            <a href="" class="left-small-item">
+                <i class="icon-menu-left-small icon-video_library"></i>
+                <p>Bibioteca</p>
+            </a>
+        </div>
         <!-- <div class="menu-left">
             <a href="" class="menu-left-item">
                 <i class="icon-menu-left icon-home"></i>
@@ -130,8 +156,8 @@
             <a href="" class="condition">prueba funciones nuevas</a>
             <i class="icon-copyright icon-stack"></i>
             <p>2020 Google LLC</p>
-        </div>
-        <div class="menu-crear">
+        </div> -->
+        <!-- <div class="menu-crear">
             <a href="" class="menu-crear-item">
                 <i class="icon-menu-crear icon-film"></i>
                 <p>subir video</p>
@@ -140,8 +166,8 @@
                 <i class="icon-menu-crear icon-feed"></i>
                 <p>Transmitir en vivo</p>
             </a>
-        </div>
-        <div class="menu-apps">
+        </div> -->
+        <!-- <div class="menu-apps">
             <a href="" class="menu-apps-item">
                 <i class="icon-menu-apps icon-youtube"></i>
                 <p>YouTube TV</p>
@@ -162,8 +188,8 @@
                 <i class="icon-menu-apps icon-youtube"></i>
                 <p>YouTube para Artistas</p>
             </a>
-        </div>
-        <div class="menu-notifications">
+        </div> -->
+        <!-- <div class="menu-notifications">
             <div class="bar-notification">
                 <p>Notificaciones</p>
                 <a href="" class="config">
@@ -251,14 +277,14 @@
                 <img src="" alt="" class="image-content">
                 <i class="more-options-notification icon-more-vertical"></i>
             </a>
-        </div>
-        <div class="menu-more-options-notification">
+        </div> -->
+        <!-- <div class="menu-more-options-notification">
             <i class="ocultar icon-stack"></i>
             <p>Ocultar esta notificación</p>
             <p>Desactivar todas las notificaciones del artista</p>
             <p>Desactivar todas las notificaciones de recomendaciones</p>
-        </div>
-        <div class="menu-profile">
+        </div> -->
+        <!-- <div class="menu-profile">
             <div class="account">
                 <img src="" alt="" class="image-profile">
                 <p class="name-account">Valentina Miguel</p>
@@ -322,8 +348,8 @@
                 </a>
             </div>
             <p class="restrict">Modo restringido: desactivado</p>
-        </div>
-        <div class="main-content">
+        </div> -->
+        <!-- <div class="main-content">
             <div class="container-content">
                 <div class="container-image-content">
                     <img src="" alt="" class="image-content">
@@ -588,8 +614,8 @@
                 </div>
                 <i class="more-options-content"></i>
             </div>
-        </div>
-        <div class="menu-more-options-content">
+        </div> -->
+        <!-- <div class="menu-more-options-content">
             <div class="interes">
                 <div class="option-content">
                     <i class="icon-option-content icon-playlist_play"></i>
