Se prepara para el menu grande desplegable

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p>Bibioteca</p>
             </a>
         </div>
-        <!-- <div class="menu-left">
+        <div class="menu-left">
             <a href="" class="menu-left-item">
                 <i class="icon-menu-left icon-home"></i>
                 <p>Principal</p>
@@ -156,7 +156,7 @@
             <a href="" class="condition">prueba funciones nuevas</a>
             <i class="icon-copyright icon-stack"></i>
             <p>2020 Google LLC</p>
-        </div> -->
+        </div>
         <!-- <div class="menu-crear">
             <a href="" class="menu-crear-item">
                 <i class="icon-menu-crear icon-film"></i>
