Se termina el diseño del segundo menu y se deja con display none

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="header">
             <nav class="bar-top">
                 <div class="menu-bar-left">
-                    <i class="icon-menu-left"></i>
+                    <i class="icon-menu-left-burguer"></i>
                     <img src="images/YouTube_Premium_logo.png" alt="">
                     <span>CO</span>
                 </div>
@@ -100,62 +100,66 @@
                 <i class="icon-menu-left icon-stack"></i>
                 <p>Mostrar más</p>
             </a>
-            <p>suscriptiones</p>
+            <p class="section-tittle">suscripciones</p>
             <a href="" class="menu-left-item">
-                <i class="icon-suscription icon-stack"></i>
+                <img src="images/image-profile.PNG" alt="" class="image-profile-suscription">
                 <p>Canal 1</p>
             </a>
             <a href="" class="menu-left-item">
-                <i class="icon-suscription icon-stack"></i>
+                <img src="images/image-profile.PNG" alt="" class="image-profile-suscription">
                 <p>Canal 2</p>
             </a>
             <a href="" class="menu-left-item">
                 <i class="icon-menu-left icon-stack"></i>
-                <p>explorar canales</p>
+                <p>Explorar canales</p>
             </a>
-            <p>más de youtube</p>
+            <p class="section-tittle">más de youtube</p>
             <a href="" class="menu-left-item">
                 <i class="icon-menu-left icon-stack"></i>
                 <p>Videojuegos</p>
             </a>
             <a href="" class="menu-left-item">
                 <i class="icon-menu-left icon-feed"></i>
-                <p>en vivo</p>
+                <p>En vivo</p>
             </a>
             <a href="" class="menu-left-item">
                 <i class="icon-menu-left icon-stack"></i>
-                <p>aprendizaje</p>
+                <p>Aprendizaje</p>
             </a>
             <a href="" class="menu-left-item">
                 <i class="icon-menu-left icon-cog"></i>
-                <p>configuración</p>
+                <p>Configuración</p>
             </a>
             <a href="" class="menu-left-item">
                 <i class="icon-menu-left icon-flag"></i>
-                <p>historial de denuncias</p>
+                <p>Historial de denuncias</p>
             </a>
             <a href="" class="menu-left-item">
                 <i class="icon-menu-left icon-help"></i>
-                <p>ayuda</p>
+                <p>Ayuda</p>
             </a>
             <a href="" class="menu-left-item">
                 <i class="icon-menu-left icon-message-square"></i>
-                <p>enviar comentarios</p>
+                <p>Enviar comentarios</p>
             </a>
-            <a href="" class="condition">Acerca de</a>
-            <a href="" class="condition">Prensa</a>
-            <a href="" class="condition">Derechos de autor</a>
-            <a href="" class="condition">comunícate con nosotros</a>
-            <a href="" class="condition">creadores</a>
-            <a href="" class="condition">publicidad</a>
-            <a href="" class="condition">desarrolladores</a>
-            <a href="" class="condition">condiciones</a>
-            <a href="" class="condition">privacidad</a>
-            <a href="" class="condition">política y seguridad</a>
-            <a href="" class="condition">cómo funciona YouTube</a>
-            <a href="" class="condition">prueba funciones nuevas</a>
-            <i class="icon-copyright icon-stack"></i>
-            <p>2020 Google LLC</p>
+            <div class="section-tittle conditions">
+                <a href="" class="condition">Acerca de</a>
+                <a href="" class="condition">Prensa</a>
+                <a href="" class="condition">Derechos de autor</a>
+                <a href="" class="condition">Comunícate con nosotros</a>
+                <a href="" class="condition">Creadores</a>
+                <a href="" class="condition">Publicidad</a>
+                <a href="" class="condition">Desarrolladores</a> <br/><br/>
+                <a href="" class="condition">Condiciones</a>
+                <a href="" class="condition">Privacidad</a>
+                <a href="" class="condition">Política y seguridad</a>
+                <a href="" class="condition">Cómo funciona YouTube</a>
+                <a href="" class="condition">Prueba funciones nuevas</a>
+            </div>
+            <div class="copyright">
+                <i class="icon-copyright icon-stack"></i>
+                <p class="text-copyright">2020 Google LLC</p>
+            </div>
         </div>
         <!-- <div class="menu-crear">
             <a href="" class="menu-crear-item">
