Se crea el archivo de js para generar el cambio entre menus

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="header">
             <nav class="bar-top">
                 <div class="menu-bar-left">
-                    <i class="icon-menu-left-burguer"></i>
+                    <i class="icon-menu-left-burger"></i>
                     <img src="images/YouTube_Premium_logo.png" alt="">
                     <span>CO</span>
                 </div>
@@ -649,5 +649,6 @@
                 </div>
             </div>
         </div> -->
+        <script src="script.js"></script>
     </body>
 </html>
