Se organiza el menu de crear

--- a/index.html
+++ b/index.html
@@ -161,17 +161,17 @@
                 <p class="text-copyright">2020 Google LLC</p>
             </div>
         </div>
-        <!-- <div class="menu-crear">
+        <div class="menu-crear">
             <a href="" class="menu-crear-item">
                 <i class="icon-menu-crear icon-film"></i>
-                <p>subir video</p>
+                <p>Subir video</p>
             </a>
             <a href="" class="menu-crear-item">
                 <i class="icon-menu-crear icon-feed"></i>
                 <p>Transmitir en vivo</p>
             </a>
-        </div> -->
-        <!-- <div class="menu-apps">
+        </div>
+        <div class="menu-apps">
             <a href="" class="menu-apps-item">
                 <i class="icon-menu-apps icon-youtube"></i>
                 <p>YouTube TV</p>
@@ -192,7 +192,7 @@
                 <i class="icon-menu-apps icon-youtube"></i>
                 <p>YouTube para Artistas</p>
             </a>
-        </div> -->
+        </div>
         <!-- <div class="menu-notifications">
             <div class="bar-notification">
                 <p>Notificaciones</p>
@@ -353,7 +353,7 @@
             </div>
             <p class="restrict">Modo restringido: desactivado</p>
         </div> -->
-        <!-- <div class="main-content">
+        <div class="main-content">
             <div class="container-content">
                 <div class="container-image-content">
                     <img src="" alt="" class="image-content">
@@ -618,7 +618,7 @@
                 </div>
                 <i class="more-options-content"></i>
             </div>
-        </div> -->
+        </div>
         <!-- <div class="menu-more-options-content">
             <div class="interes">
                 <div class="option-content">
