Se organiza el menu del perfil

--- a/index.html
+++ b/index.html
@@ -290,71 +290,73 @@
             <p>Desactivar todas las notificaciones del artista</p>
             <p>Desactivar todas las notificaciones de recomendaciones</p>
         </div> -->
-        <!-- <div class="menu-profile">
+        <div class="menu-profile">
             <div class="account">
-                <img src="" alt="" class="image-profile">
+                <img src="images/image-profile.PNG" alt="" class="image-profile">
                 <p class="name-account">Valentina Miguel</p>
-                <p class="email-account">valentina.mmmiguel1212@gmail.com</p>
+                <p class="email-account">valentina.miguel1212@gmail.com</p>
                 <p class="admin">Administra tu Cuenta de Google</p>
             </div>
-            <div class="account-options">
-                <a href="" class="account-options-item">
-                    <i class="icon-account-options icon-user-square"></i>
-                    <p>Tu canal</p>
-                </a>
-                <a href="" class="account-options-item">
-                    <i class="icon-account-options icon-currency-dollar"></i>
-                    <p>Compras y membresías</p>
-                </a>
-                <a href="" class="account-options-item">
-                    <i class="icon-account-options icon-cog"></i>
-                    <p>YouTube Studio</p>
-                </a>
-                <a href="" class="account-options-item">
-                    <i class="icon-account-options icon-user-square"></i>
-                    <p>Cambiar de cuenta</p>
-                </a>
-                <a href="" class="account-options-item">
-                    <i class="icon-account-options icon-exit_to_app"></i>
-                    <p>Salir</p>
-                </a>
+            <div class="options-account-container">
+                <div class="account-options">
+                    <a href="" class="account-options-item">
+                        <i class="icon-account-options icon-user-square"></i>
+                        <p>Tu canal</p>
+                    </a>
+                    <a href="" class="account-options-item">
+                        <i class="icon-account-options icon-currency-dollar"></i>
+                        <p>Compras y membresías</p>
+                    </a>
+                    <a href="" class="account-options-item">
+                        <i class="icon-account-options icon-cog"></i>
+                        <p>YouTube Studio</p>
+                    </a>
+                    <a href="" class="account-options-item">
+                        <i class="icon-account-options icon-user-square"></i>
+                        <p>Cambiar de cuenta</p>
+                    </a>
+                    <a href="" class="account-options-item">
+                        <i class="icon-account-options icon-exit_to_app"></i>
+                        <p>Salir</p>
+                    </a>
+                </div>
+                <div class="config-global">
+                    <a href="" class="config-global-item">
+                        <i class="icon-config-global icon-stack"></i>
+                        <p>Aspecto: Tema del dispositivo</p>
+                    </a>
+                    <a href="" class="config-global-item">
+                        <i class="icon-config-global icon-language"></i>
+                        <p>Idiona: Español latinoamericano</p>
+                    </a>
+                    <a href="" class="config-global-item">
+                        <i class="icon-config-global icon-sphere"></i>
+                        <p>Ubicación: Colombia</p>
+                    </a>
+                    <a href="" class="config-global-item">
+                        <i class="icon-config-global icon-cog"></i>
+                        <p>Configuración</p>
+                    </a>
+                    <a href="" class="config-global-item">
+                        <i class="icon-config-global icon-stack"></i>
+                        <p>Tus datos en YouTube</p>
+                    </a>
+                    <a href="" class="config-global-item">
+                        <i class="icon-config-global icon-help"></i>
+                        <p>Ayuda</p>
+                    </a>
+                    <a href="" class="config-global-item">
+                        <i class="icon-config-global icon-message-square"></i>
+                        <p>Enviar comentarios</p>
+                    </a>
+                    <a href="" class="config-global-item">
+                        <i class="icon-config-global icon-stack"></i>
+                        <p>Combinaciones de teclas</p>
+                    </a>
+                </div>
+                <p class="restrict">Modo restringido: desactivado</p>
             </div>
-            <div class="config-global">
-                <a href="" class="config-global-item">
-                    <i class="icon-config-global icon-stack"></i>
-                    <p>Aspecto: Tema del dispositivo</p>
-                </a>
-                <a href="" class="config-global-item">
-                    <i class="icon-config-global icon-language"></i>
-                    <p>Idiona: Español latinoamericano</p>
-                </a>
-                <a href="" class="config-global-item">
-                    <i class="icon-config-global icon-sphere"></i>
-                    <p>Ubicación: Colombia</p>
-                </a>
-                <a href="" class="config-global-item">
-                    <i class="icon-config-global icon-cog"></i>
-                    <p>Configuración</p>
-                </a>
-                <a href="" class="config-global-item">
-                    <i class="icon-config-global icon-stack"></i>
-                    <p>Tus datos en YouTube</p>
-                </a>
-                <a href="" class="config-global-item">
-                    <i class="icon-config-global icon-help"></i>
-                    <p>Ayuda</p>
-                </a>
-                <a href="" class="config-global-item">
-                    <i class="icon-config-global icon-message-square"></i>
-                    <p>Enviar comentarios</p>
-                </a>
-                <a href="" class="config-global-item">
-                    <i class="icon-config-global icon-stack"></i>
-                    <p>Combinaciones de teclas</p>
-                </a>
-            </div>
-            <p class="restrict">Modo restringido: desactivado</p>
-        </div> -->
+        </div>
         <div class="main-content">
             <div class="container-content">
                 <div class="container-image-content">
