se separa en dos archivos las variables y las funciones de js y me doy con ese bug

--- a/index.html
+++ b/index.html
@@ -1310,5 +1310,6 @@
         </main>
 
         <script src="js/script.js"></script>
+        <script src="js/script2.js"></script>
     </body>
 </html>
